# approx_shannon_entropy

./: Cargo.toml  README.md
examples/: stdin_entropy.rs  three_bits.rs
src/: lib.rs
