[package]
name        = "approx_shannon_entropy"
version     = "0.1.1"
description = "Approximate Shannon entropy, using micromath natural logarithm"
authors     = ["hazelutf8 <hazelutf8@protonmail.com>"]
license     = "Apache-2.0 OR MIT"
repository  = "https://github.com/hazelutf8/approx_shannon_entropy"
readme      = "README.md"
edition     = "2018"
categories  = ["embedded", "mathematics", "no-std"]
keywords    = ["math", "no_std", "shannon", "entropy"]

[dependencies]
micromath = "1.1.1"

[[example]]
name = "three_bits"
path = "examples/three_bits.rs"

[[example]]
name = "stdin_entropy"
path = "examples/stdin_entropy.rs"
